Bug 508084 - Changing Drawing Tablet Setting doesn't take effect after save / also even after restart.
Summary: Changing Drawing Tablet Setting doesn't take effect after save / also even af...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_tablet (other bugs)
Version First Reported In: 6.4.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 512572 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-08-10 14:47 UTC by kaisaki1342
Modified: 2025-12-04 22:15 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.4
Sentry Crash Report:


Attachments
Display Tab on System Setting Set to Specific Screen. (109.67 KB, image/png)
2025-08-10 14:47 UTC, kaisaki1342
Details
Screenshot of KCM showing only one tablet to map to screen (64.84 KB, image/png)
2025-11-28 11:18 UTC, Sebastian Parborg
Details
Output of "libinput list-devices" for a Huion Kamvas pro 16 (3.21 KB, text/plain)
2025-11-28 11:20 UTC, Sebastian Parborg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kaisaki1342 2025-08-10 14:47:40 UTC
Created attachment 183933 [details]
Display Tab on System Setting Set to Specific Screen.

KDE [DrawingTablet][Wayland] - sorry  I cant find it in the list

STEPS TO REPRODUCE
1. Open System Setting , Select Drawing Tablet
2.a on Display Tab 
    2.a.1 Current Selection to A Specific screen
2.b On Pen Tab , 
    2.b.1 Change pen button one to something else like Right Click
    2.b.2 Change pen button one to something else like Middle Click
3. Save, Check the UI to reflect all changes. Drawing Tablet  UI reflects changes. 
4.a Test pen button 
    4.a.1 Pen button still retains the previous configuration instead of the new one. In my case my previous configuration for button 1 is middle click and my Pen button 2 is right click. I was attemptin to switch the 2 but no matter what I do they retain their previous configuration. 
4.b Test Display
     4.b.1 Mapping Doesn't follow the selected screen instead it still affect other screen whichever was the one that retains the mouse cursor before switching to pen. I am expecting it to jump to the monitor I map it to. 
   
OBSERVED RESULT
Change in configuration shows up in UI, even after restart the effect however is not applied. 

Pen button still retains the previous configuration instead of the new one. 
In my case my previous configuration for button 1 is middle click and my Pen button 2 is right click. I was attempting to switch the 2 but no matter what I do they retain their previous configuration. 

Mapping doesnt follow the selected screen instead it still affect other screen whichever was the one that retains the mouse cursor before switching to pen. I am expecting it to jump to the monitor I map it to. 

NOTE:
    The configuration change did work 1 time and is why my  pen button previous configuration has right click on button 2. For some reason it has not work since then and I was attempting to remap this button and the screen. 

EXPECTED RESULT
For the actual action to follow the saved and displayed configuration after saving. 

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma:  FEDORA LINUX 42
KDE Plasma Version: 6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
Tablet : Huion Kamvas 22 Plus 
Pen : Standard Huion pen and the Slim Huion Pen
Comment 1 kaisaki1342 2025-08-11 22:59:08 UTC
Update: 
I log in to my desktop last night and check my drawing tablet configuration. 
It was resetted. The Display screen shows "Follow Current Screen", and the Button shows "Defer to Application".
I change it to my desired configuration - set Display mapping to Kamvas and the button 1 to MLB and 2 to RMB. 
Save it and tested, and that change work. Which make it seem the bug is fix.

To test if the bug is truly fix. I login again this morning and attempted to remap the button. 
I change button 2 to Keyboard key "A" and saved.  It shows in the UI but like before the expected action is not happening.
I then change it again to RMB and saved - doubled check to be sure. Again shows in the UI but the effect is not applied. 

So I think the bug its still there. 

So far it seems -> First change it'll work. Changes after it wont. 

As for the reset - I have no clue how it happened. 
I did booted to a separate windows drive [but i did this several times before so idk] 
I also did change my keyboard layout from 104 to 86 Generic, Before I attempted to remap the tablet again. 

I hope this info helps.
Comment 2 Haider 2025-11-04 19:04:04 UTC
i can confirm this issue on anything 6.5 or higher. if anyone can tell me the process of getting logs to post here i would gladly do so.

so far i noticed this issue on:
fedora kde 43, KDE linux, bazzite 43, current bazzite stable 

last time i recall it working for me was on bazzite when it still used 6.4.something
Comment 3 Sebastian Parborg 2025-11-25 16:44:55 UTC
I can confirm this is and issue on Plasma 6.5.

The issue is that the settings app writes (and reads) the wrong button numbers to `.config/kcminputrc`.

For example on most pens the two buttons has the input nr 331 and 332.
So a valid config file (which still works if you manually add it to the config file) still works.
Something like this:

[ButtonRebinds][TabletTool][Wacom Intuos Pro M Pen]
331=MouseButton,274
332=Key,Ctrl+Z

However if we use the GUI setting manager in Plasma 6.5 these bindings are not displayed. It instead shows that there is nothing changed.
If we then change the binding via the UI, it will add them but with the incorrect pen button numbers. Like this:

[ButtonRebinds][TabletTool][Wacom Intuos Pro M Pen]
331=MouseButton,274
332=Key,Ctrl+Z
0=MouseButton,274
1=Key,Ctrl+Z

However as you can see it did not overwrite the old settings (which in this case is kinda good as those actually still work), but of course if we remove the old bindings IE:

[ButtonRebinds][TabletTool][Wacom Intuos Pro M Pen]
0=MouseButton,274
1=Key,Ctrl+Z

Now it will show that you have rebound the buttons in the GUI, but that is not true as the button numbers are incorrect.

I'm guessing that there were some update in later 6.4 versions that broke this and nobody from the dev team noticed.
(Because their old binding that were saved in the config file were still working)
Comment 4 Haider 2025-11-25 21:33:02 UTC
omg i didnt know about this file thank you!

I also saw that (for my device atleast) it creates duplicate entries for my tablet and for my pen with the same settings. 
This lead to some issues with remapping the screen on bazzite while on KDE Linux didnt have a big affect afaik.
Comment 5 Sebastian Parborg 2025-11-27 14:43:47 UTC
Besides the button remapping, I can also confirm that the "map to screen" settings also seems broken as it seems like "follow active" is always on even after trying to lock the tablet to a specific screen in the GUI. Nothing seems to be written to the `.config/kcminputrc` file when changing these settings.
Comment 6 Sebastian Parborg 2025-11-27 16:36:40 UTC
I managed to setup "map to screen" correctly using https://invent.kde.org/redstrate/ktabletconfig

The issue of the GUI setting configuratior not writing anything to the `.config/kcminputrc` seemed to go way for some reason, but it writes the wrong libinput device.

On this computer I have a Huion Kamvas Pro 27 which shows up in libinput as:
Device: Tablet Monitor
Id: usb:256c:006d

The GUI settings configuration, after it started writing to the config file, put the setting under "[Libinput][9580][109][Tablet Monitor Stylus]". However it seems for this tablet, that the correct section is instead "[Libinput][9580][109][Tablet Monitor]".
When I set the output of the "Tablet Monitor" (not the stylus) with ktabletconfig it would start working.

I'm a bit confused that this was working before to me with older Plasma versions. So I'm not sure why it is broken now. Perhaps some things changed in libinput? (I'm on libinput version  1.29.1)
Comment 7 Sebastian Parborg 2025-11-27 16:39:48 UTC
I should note that "ktabletconfig --list-stylus" lists both "Tablet Monitor Stylus" and "Tablet Monitor" on my end.
Comment 8 Bug Janitor Service 2025-11-27 23:08:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3342
Comment 9 Joshua Goins 2025-11-27 23:10:35 UTC
*** Bug 512572 has been marked as a duplicate of this bug. ***
Comment 10 Joshua Goins 2025-11-27 23:13:41 UTC
Sorry about the delay, I fixed the stylus issue in https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3342. However the display mapping issue is very interesting.

> I should note that "ktabletconfig --list-stylus" lists both "Tablet Monitor Stylus" and "Tablet Monitor" on my end.

This is just your tablet being a bit hard to control, but do you see two devices in the tablet KCM to control?
Comment 11 Sebastian Parborg 2025-11-28 11:18:48 UTC
Created attachment 187226 [details]
Screenshot of KCM showing only one tablet to map to screen
Comment 12 Sebastian Parborg 2025-11-28 11:20:46 UTC
Created attachment 187227 [details]
Output of "libinput list-devices" for a Huion Kamvas pro 16
Comment 13 Sebastian Parborg 2025-11-28 11:21:19 UTC
I dont think I have two devices in KCM.

I've attached a screenshot of what I see in KCM and the relevant output of "libinput list-devices" if that helps.

The screen mapping did work before in Plasma 6.4 and earlier though, so I'm not sure what changed.
Comment 14 Sebastian Parborg 2025-11-28 11:22:13 UTC
I forgot to mention that I am on Gentoo, so if you want me to try some patches, I can easily do so :)
Comment 15 Bug Janitor Service 2025-11-28 14:16:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3343
Comment 16 Joshua Goins 2025-11-28 14:17:20 UTC
(In reply to Sebastian Parborg from comment #13)
> I dont think I have two devices in KCM.
> 
> I've attached a screenshot of what I see in KCM and the relevant output of
> "libinput list-devices" if that helps.
> 
> The screen mapping did work before in Plasma 6.4 and earlier though, so I'm
> not sure what changed.

That libinput debug log was excellent, thank you! See https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3343 for a possible fix, and you should be able to apply that patch cleanly. Your KCM should list two devices now, and you just need to select the right one.
Comment 17 Joshua Goins 2025-11-28 14:44:33 UTC
Git commit b539347057961b40bcf2f029bdcda8e1cbe67a90 by Joshua Goins.
Committed on 28/11/2025 at 14:01.
Pushed by redstrate into branch 'master'.

kcms/tablet: Fix pen button mapping not working

This was a stupid but easy mistake, we were writing to the wrong buttons
(i.e. 0 instead of BTN_STYLUS) and so existing configs were fine, but
attempting to change them now wouldn't work and was super confusing.

M  +4    -4    kcms/tablet/ui/StylusTab.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/b539347057961b40bcf2f029bdcda8e1cbe67a90
Comment 18 Joshua Goins 2025-11-30 19:39:28 UTC
Git commit f38276534ea02b5b82bf032332072f824c09f520 by Joshua Goins.
Committed on 30/11/2025 at 18:57.
Pushed by redstrate into branch 'Plasma/6.5'.

kcms/tablet: Fix pen button mapping not working

This was a stupid but easy mistake, we were writing to the wrong buttons
(i.e. 0 instead of BTN_STYLUS) and so existing configs were fine, but
attempting to change them now wouldn't work and was super confusing.
(cherry picked from commit b539347057961b40bcf2f029bdcda8e1cbe67a90)

M  +4    -4    kcms/tablet/ui/StylusTab.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/f38276534ea02b5b82bf032332072f824c09f520
Comment 19 theawkwarddreamer 2025-12-01 23:19:03 UTC
(In reply to Sebastian Parborg from comment #3)
> I can confirm this is and issue on Plasma 6.5.
> 
> The issue is that the settings app writes (and reads) the wrong button
> numbers to `.config/kcminputrc`.
> 
> For example on most pens the two buttons has the input nr 331 and 332.
> So a valid config file (which still works if you manually add it to the
> config file) still works.
> Something like this:
> 
> [ButtonRebinds][TabletTool][Wacom Intuos Pro M Pen]
> 331=MouseButton,274
> 332=Key,Ctrl+Z
> 
> However if we use the GUI setting manager in Plasma 6.5 these bindings are
> not displayed. It instead shows that there is nothing changed.
> If we then change the binding via the UI, it will add them but with the
> incorrect pen button numbers. Like this:
> 
> [ButtonRebinds][TabletTool][Wacom Intuos Pro M Pen]
> 331=MouseButton,274
> 332=Key,Ctrl+Z
> 0=MouseButton,274
> 1=Key,Ctrl+Z
> 
> However as you can see it did not overwrite the old settings (which in this
> case is kinda good as those actually still work), but of course if we remove
> the old bindings IE:
> 
> [ButtonRebinds][TabletTool][Wacom Intuos Pro M Pen]
> 0=MouseButton,274
> 1=Key,Ctrl+Z
> 
> Now it will show that you have rebound the buttons in the GUI, but that is
> not true as the button numbers are incorrect.
> 
> I'm guessing that there were some update in later 6.4 versions that broke
> this and nobody from the dev team noticed.
> (Because their old binding that were saved in the config file were still
> working)

Attempted to use this as a workaround while I wait for any fixes to end up on my machine, but nothing seems to work (In reply to Sebastian Parborg from comment #3)
> I can confirm this is and issue on Plasma 6.5.
> 
> The issue is that the settings app writes (and reads) the wrong button
> numbers to `.config/kcminputrc`.
> 
> For example on most pens the two buttons has the input nr 331 and 332.
> So a valid config file (which still works if you manually add it to the
> config file) still works.
> Something like this:
> 
> [ButtonRebinds][TabletTool][Wacom Intuos Pro M Pen]
> 331=MouseButton,274
> 332=Key,Ctrl+Z
> 
> However if we use the GUI setting manager in Plasma 6.5 these bindings are
> not displayed. It instead shows that there is nothing changed.
> If we then change the binding via the UI, it will add them but with the
> incorrect pen button numbers. Like this:
> 
> [ButtonRebinds][TabletTool][Wacom Intuos Pro M Pen]
> 331=MouseButton,274
> 332=Key,Ctrl+Z
> 0=MouseButton,274
> 1=Key,Ctrl+Z
> 
> However as you can see it did not overwrite the old settings (which in this
> case is kinda good as those actually still work), but of course if we remove
> the old bindings IE:
> 
> [ButtonRebinds][TabletTool][Wacom Intuos Pro M Pen]
> 0=MouseButton,274
> 1=Key,Ctrl+Z
> 
> Now it will show that you have rebound the buttons in the GUI, but that is
> not true as the button numbers are incorrect.
> 
> I'm guessing that there were some update in later 6.4 versions that broke
> this and nobody from the dev team noticed.
> (Because their old binding that were saved in the config file were still
> working)

I'm attempting to use this as a workaround while I wait for the fixes to end up on my machine, but even remapping supposedly every button on my stylus to right click does absolutely nothing. Touching the stylus to the screen is still left click. The side button is still middle click. Eraser erases. I have the following in my kcminputrc:

[ButtonRebinds][TabletTool][ILIT2901:00 222A:5539 Stylus]
320=MouseButton,273
321=MouseButton,273
331=MouseButton,273
332=MouseButton,273

I assume that's the correct device as the header was created by me changing one of the GUI bindings to right click and then modifying the 0 to 331. My logs from before I changed this file are over at: https://bugs.kde.org/show_bug.cgi?id=512572 ; I'm starting to think my issue isn't a duplicate of this one...
Comment 20 Sebastian Parborg 2025-12-03 11:39:15 UTC
I think you might be running into the other part of this issue where your tablet reports multiple stylus input devices.
You can use the command "libinput list-devices" in the terminal to see what device names you have for your tablet.
You can also use https://invent.kde.org/redstrate/ktabletconfig and do `ktabletconfig --list-stylus` to see the available names.

Then you can try to switch the "ILIT2901:00 222A:5539 Stylus" to the others that are listed, if any.

Note that if you manually edit the ".config/kcminputrc" file, you need to make KDE reload the file. The most fool proof way is just to logout and login again unless you have ktabletconfig.
Comment 21 theawkwarddreamer 2025-12-03 18:41:55 UTC
No other styluses are listed in ktabletconfig, though interestingly it only brings up the stylus if I don't run the command with sudo. Otherwise, it can't find the stylus at all. (--list-pad produces nothing.) Checking the mappings in ktabletconfig also tells me everything is on right click when I run the command to export the current mapping.

I've done multiple restarts/log-ins since manually editing the config file, so presumably it would've taken effect by now if it was going to. There is another entry in libinput that's related to my pen (Surface Pen Keyboard), but its capabilities are listed as 'keyboard' for some reason and it doesn't have an entry in kcminputrc.  I tried manually changing the ILIT... name to Surface Pen Keyboard and restarted, but no dice. 

The "ILIT..." stylus is also the only one sending signals per libinput record. Not sure what 'Surface Pen Keyboard' is actually contributing other than just identifying the pen (maybe sending battery level?) I'm using a surface pen on a 2-in-1 laptop/tablet which is definitely not a standard pen/tablet combination. I wouldn't be surprised if that's causing issues.
I did find a workaround by fully remapping right click to middle click, so I'm managing now at least.
Comment 22 Joshua Goins 2025-12-04 20:47:54 UTC
Git commit d440769bd1ee3999ada45dfea1fdd8432e294f54 by Joshua Goins.
Committed on 04/12/2025 at 20:17.
Pushed by redstrate into branch 'master'.

kcms/tablet: Fix configuration for misbehaving devices

Certain graphics tablets (for some reason) has two different stylus/pen
devices in the same group. Our code was assuming that there would only
be one pen device, and thus one was always hidden from the user. This
seems harmless at first, but apparently only one of these devices
actually configured the stylus. So configuring the screen, pen buttons,
etc. would appear to do nothing.

We can work around this by splitting these extra pens or whatever into
their own group, so users can at least configure these devices. Actually
solving this "extra device in group" problem should happen somewhere
else.
FIXED-IN: 6.5.4

M  +28   -20   kcms/tablet/tabletsmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/d440769bd1ee3999ada45dfea1fdd8432e294f54
Comment 23 Joshua Goins 2025-12-04 22:15:10 UTC
Git commit 96f5cebc41591c843f9e8323f8fa384d5a0958aa by Joshua Goins.
Committed on 04/12/2025 at 21:46.
Pushed by redstrate into branch 'Plasma/6.5'.

kcms/tablet: Fix configuration for misbehaving devices

Certain graphics tablets (for some reason) has two different stylus/pen
devices in the same group. Our code was assuming that there would only
be one pen device, and thus one was always hidden from the user. This
seems harmless at first, but apparently only one of these devices
actually configured the stylus. So configuring the screen, pen buttons,
etc. would appear to do nothing.

We can work around this by splitting these extra pens or whatever into
their own group, so users can at least configure these devices. Actually
solving this "extra device in group" problem should happen somewhere
else.
FIXED-IN: 6.5.4
(cherry picked from commit d440769bd1ee3999ada45dfea1fdd8432e294f54)

M  +28   -20   kcms/tablet/tabletsmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/96f5cebc41591c843f9e8323f8fa384d5a0958aa