kcms/tablet: Fix configuration for misbehaving devices

Certain graphics tablets (for some reason) has two different stylus/pen
devices in the same group. Our code was assuming that there would only
be one pen device, and thus one was always hidden from the user. This
seems harmless at first, but apparently only one of these devices
actually configured the stylus. So configuring the screen, pen buttons,
etc. would appear to do nothing.

We can work around this by splitting these extra pens or whatever into
their own group, so users can at least configure these devices. Actually
solving this "extra device in group" problem should happen somewhere
else.

BUG: 508084
FIXED-IN: 6.5.4