kcms/tablet/tabletsmodel.cpp
@@ -199,16 +199,21 @@ void TabletsModel::addDevice(const QString &sysName, bool tellModel)
         });
 
         if (it != m_devices.end()) {
-            if (dev->tabletTool()) {
+            if (dev->tabletTool() && !it->penDevice) {
                 qCDebug(KCM_TABLET) << "Adding a tablet pen to an existing thing.";
                 it->penDevice = std::move(dev);
-            } else if (dev->tabletPad()) {
+
+                const int index = std::distance(m_devices.begin(), it);
+                // We need to tell the model that a pen was added for this device and the UI needs refreshing
+                Q_EMIT deviceChanged(index);
+            } else if (dev->tabletPad() && !it->padDevice) {
                 qCDebug(KCM_TABLET) << "Adding a tablet pad to an existing thing.";
                 it->padDevice = std::move(dev);
+
+                const int index = std::distance(m_devices.begin(), it);
+                // We need to tell the model that a pad was added for this device and the UI needs refreshing
+                Q_EMIT deviceChanged(index);
             }
-            const int index = std::distance(m_devices.begin(), it);
-            // We need to tell the model that a pad/pen was added for this device and the UI needs refreshing
-            Q_EMIT deviceChanged(index);
         } else {
             TabletDevice tablet;
             tablet.deviceGroup = deviceGroup;
